<?xml version="1.0"?>
<package format="3">
  <name>tiago_description_calibration</name>
  <version>2.0.0</version>
  <description>This package contains the description of the hand-eye calibration of the TIAGO robot.  The files in this package are used also from the tiago_description package.</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
